mensagem de commit

--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -55,7 +55,7 @@
             do 37 ao 55
         </p>
 
-        <img src="/imgs/manguito de basquete.avif"/>
+        <img src="/imgs/manguito de basquete.avif" height="200"/></a>
         <h2>manguito de Basquete</h2>
         <h2>R$180,00</h2>
         <h1>Descrição</h1>
@@ -84,7 +84,7 @@
              o Campeonato Mundial de Basquete.
        
         
-        <img src="/imgs/imagem basquete.jpg"/>
+        <img src="/imgs/imagem basquete.jpg" height="200"/></a>
         <a href="https://escolaeducacao.com.br/historia-do-basquete/">/basquete</a>
         </p>
     </body>
