--- a/esporte/boxe/index.html
+++ b/esporte/boxe/index.html
@@ -52,7 +52,7 @@
              1,20m a 1,80 m
         </p>
 
-        <img src="/imgs/protetor de boca boxe.jpg"/>
+        <img src="/imgs/protetor de boca boxe.jpg" height="200"/></a>
         <h2>protetor bocal</h2>
         <h2>R$100,00</h2>
         <h1>Descrição</h1>
@@ -77,7 +77,7 @@
             com importantes organizações como a WBA, WBC e IBF.
        
         
-        <img src="/imgs/boxe.jpg"/>
+        <img src="/imgs/boxe.jpg" height="200"/></a>
         <a href="https://www.todamateria.com.br/boxe/">/boxe</a>
         </p>
     </body>
