mensagem de commit

--- a/index.html
+++ b/index.html
@@ -61,5 +61,7 @@
         </ul>
         <h1>Proprietária</h1>
         <h2>Samilly Rayara Vilela Dias</h2>
+        <h2>Raquel Caroline Chaves</h2>
+        <h2>Jose Arthur Dias</h2>
     </body>
 </html>
